--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  background: #ffffff; }
+  background: rgb(244, 244, 244); }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
@@ -128,6 +128,7 @@ em, i {
   font-style: italic; }
 
 p {
+  color: #312D2D;
   margin: 0 0 2em 0; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -142,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom: 0; }
 
 h1 {
-  font-size: 4em;
+  font-size: 2.75em;
   margin: 0 0 0.5em 0;
   line-height: 1.3; }
 
@@ -163,11 +164,15 @@ h6 {
 
 @media screen and (max-width: 1680px) {
   h1 {
-    font-size: 3.5em; } }
+    font-size: 3.25em; } }
+
+@media screen and (max-width: 1040px) {
+  h1 {
+    font-size:  2.5em; } }
 
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 3.25em; } }
+    font-size: 2.5em; } }
 
 @media screen and (max-width: 736px) {
   h1 {
@@ -1004,7 +1009,8 @@ header.major > :last-child {
   padding: 0 0.75em 0.5em 0; }
 
 header.main > :last-child {
-  margin: 0 0 1em 0; }
+  /* margin: 0 0 1em 0; */
+  margin: 0 0 0.5em 0; }
 
 /* Form */
 form {
@@ -1237,12 +1243,31 @@ input[type="radio"] + label:before {
     width: 100%; }
     .image.fit img {
       width: 100%; }
-  .image.main {
+  /* .image.main {
     display: block;
-    margin: 0 0 3em 0;
+    margin: 0 0 2em 0;
     width: 100%; }
     .image.main img {
-      width: 100%; }
+      width: 100%;
+      height: auto;
+      object-fit: cover; } */
+
+ /* my_style */
+
+ .image.main {
+  width: 100%; 
+  max-height: 645px; 
+  overflow: hidden; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+.image.main img {
+  width: 100%; 
+  max-height: 645px; 
+  object-fit: cover; 
+}
 
 a.image {
   overflow: hidden; }
@@ -1769,13 +1794,46 @@ button,
       margin-bottom: 0; }
     .posts article .image {
       display: block;
-      margin: 0 0 2em 0;
+      margin: 0 0 1em 0;
       aspect-ratio: 1.5 / 1; }
       .posts article .image img {
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover; }
+        object-fit: cover;
+        border-radius: 1.375em 1.375em 0 0; }
+
+ /* my_style  */
+
+ .card_content > h3 {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 0 0.5em 0;
+}
+ 
+.card_content > p {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media screen and  (max-width: 1024px)  {
+  .card_content > h3 {
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1024px)  {
+  .card_content > p {
+    -webkit-line-clamp: 2;
+  }
+}
+
   @media screen and (min-width: 1681px) {
     .posts article:nth-child(3n + 1):before {
       display: none; }
@@ -1856,7 +1914,8 @@ button,
   -webkit-flex-shrink: 1;
   -ms-flex-shrink: 1;
   flex-shrink: 1;
-  width: 100%; }
+  width: 100%; 
+}
   #main > .inner {
     padding: 0 6em 0.1em 6em ;
     margin: 0 auto;
@@ -1881,6 +1940,47 @@ button,
       padding: 0 2em 0.1em 2em ; }
       #main > .inner > section {
         padding: 3em 0 1em 0 ; } }
+
+/* my_style*/
+
+.post_container {
+  margin: auto;
+  padding: 0 15px;
+}
+@media (min-width: 576px) {
+    .post_container {
+        max-width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .post_container {
+        max-width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    .post_container {
+        max-width: 990px;
+    }
+}
+@media (min-width: 1200px) {
+    .post_container {
+        max-width: 1170px;
+    }
+}
+@media (min-width: 1400px) {
+    .post_container {
+        max-width: 1806px;
+    }
+}
+
+.post_content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.post_body {
+  border-bottom: 2px solid #8A80BF;
+}
 
 /* Sidebar */
 #search form {
@@ -2088,10 +2188,28 @@ button,
     flex: 1;
     margin-bottom: 0; }
   #header .logo {
+    margin-right: 30px;
+    display: inline-block;
     border-bottom: 0;
     color: inherit;
     font-family: "Roboto Slab", serif;
-    font-size: 1.125em; }
+    font-size: 1.125em;
+    flex: initial; }
+    
+    #header .dark-mode-button {
+      display: inline-block;
+      border-bottom: 0;
+      color: inherit;
+      flex: initial;
+      align-self: center; }
+
+#header .dark-mode-button svg path {
+  transition: fill 0.3s;
+}
+      
+#header .dark-mode-button:hover svg path {
+  fill: #8A80BF; 
+}
   
   /* #header .logo img {
     margin-right: 5px;
@@ -2108,7 +2226,7 @@ button,
       padding-top: 6.5em; }
       #header .logo {
         font-size: 1.25em;
-        margin: 0; }
+        margin-right: 15px; }
       #header .icons {
         height: 5em;
         line-height: 5em;
@@ -2118,6 +2236,8 @@ button,
 
 /* Banner */
 #banner {
+  max-width: 1400px;
+  margin: 0 auto;
   padding: 6em 0 4em 0 ;
   display: -moz-flex;
   display: -webkit-flex;
@@ -2135,7 +2255,19 @@ button,
     -ms-flex-shrink: 1;
     flex-shrink: 1;
     width: 50%; }
+
+/* my_style */
+
+.content > p {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
   #banner .image {
+    position: relative;
     -moz-flex-grow: 0;
     -webkit-flex-grow: 0;
     -ms-flex-grow: 0;
@@ -2144,21 +2276,31 @@ button,
     -webkit-flex-shrink: 0;
     -ms-flex-shrink: 0;
     flex-shrink: 0;
-    display: block;
-    margin: 0 0 2em 4em;
+    display: flex;
+    margin: 0 0 2em 2em;
     width: 50%; }
     #banner .image img {
-      height: 100%;
-      -moz-object-fit: cover;
-      -webkit-object-fit: cover;
-      -ms-object-fit: cover;
-      object-fit: cover;
-      -moz-object-position: center;
-      -webkit-object-position: center;
-      -ms-object-position: center;
-      object-position: center;
-      width: 100%; }
-  @media screen and (orientation: portrait) {
+      position: absolute; /* Позиционируем абсолютно */
+      top: 0; /* Размещаем изображение вверху контейнера */
+      left: 0; /* Размещаем изображение слева контейнера */
+      width: 100%; /* Ширина изображения равна ширине контейнера */
+      height: 100%; /* Высота изображения равна высоте контейнера */
+      object-fit: cover; /* Используем объектно-ориентированное заполнение, чтобы изображение заполнило свою область */
+      object-position: center; /* Позиционируем изображение по центру */}
+
+@media screen and (max-width: 1680px) {
+  #banner  {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #banner  {
+    max-width: 800px;
+  }
+}
+
+  @media screen and (orientation: portrait) and (max-width: 1024px) {
     #banner {
       -moz-flex-direction: column-reverse;
       -webkit-flex-direction: column-reverse;
@@ -2185,7 +2327,7 @@ button,
         -webkit-flex-shrink: 0;
         -ms-flex-shrink: 0;
         flex-shrink: 0;
-        margin: 0 0 4em 0;
+        margin: 0 0 2em 0;
         height: 25em;
         max-height: 50vh;
         min-height: 18em;
@@ -2209,7 +2351,7 @@ button,
   user-select: none;
   color: #3d4449;
   font-family: "Roboto Slab", serif;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.075em;
   list-style: none;
   margin-bottom: 0;
@@ -2272,7 +2414,8 @@ button,
     margin: 0.5em 0 1.5em 0;
     padding-left: 1em; }
     #menu > ul > li > ul a, #menu > ul > li > ul span {
-      font-size: 0.8em; }
+      font-size: 0.8em;
+      color: rgb(61, 68, 73); }
     #menu > ul > li > ul > li {
       margin: 0.125em 0 0 0;
       padding: 0.125em 0 0 0; }
@@ -2280,3 +2423,84 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+
+ /* dark-mode-button */
+
+.dark-mode-button {
+  display: block;
+  width: 23px;
+  height: 23px;
+  text-decoration: none;
+  color: inherit; 
+}
+
+.dark-mode-button svg {
+  width: 100%;
+  height: 100%;
+}
+
+.dark-mode {
+  background-color: #1C1C1C;
+  color: #f0f0f0;
+}
+
+.dark-mode strong, b {
+  color: #f0f0f0;
+}
+
+.dark-mode .dark-mode-button svg path {
+  fill: #f0f0f0;
+}
+
+.dark-mode h1,
+.dark-mode h2,
+.dark-mode h3,
+.dark-mode h4,
+.dark-mode h5,
+.dark-mode h6 {
+  color: #f0f0f0;
+}
+
+.dark-mode p {
+  color: #CED2D2;
+}
+
+/* .dark-mode  a {
+  color: #B0A8DF;
+} */
+
+.dark-mode #header {
+  border-bottom: solid 5px #B0A8DF;
+}
+/* 
+ .button {
+  box-shadow: inset 0 0 0 2px #B0A8DF;
+  color: #B0A8DF !important;
+} */
+
+.dark-mode header.major > :last-child {
+  border-bottom: solid 3px #B0A8DF;
+}
+
+.dark-mode #sidebar {
+  background-color: #0A0908;
+}
+
+.dark-mode #menu ul li a,
+.dark-mode #menu ul li span {
+  color: #f0f0f0; 
+}
+
+.dark-mode #sidebar > .inner > .alt {
+  background-color: #100E0D;
+}
+
+.dark-mode #search form input[type="text"] {
+  background: #000;
+  border: solid 1px  rgba(45, 40, 38, 0.75);
+}
+
+.dark-mode #search form:before {
+  color: #f0f0f0;
+}
