--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,7 @@ h6 {
 
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 2.5em; } }
+    font-size: 2em; } }
 
 @media screen and (max-width: 736px) {
   h1 {
@@ -1009,6 +1009,16 @@ header.major > :last-child {
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0; }
 
+.major {
+  padding: 0 0 0 6em;
+}
+
+@media screen and (max-width: 1680px) {
+.major {
+  padding: 0;}
+}
+
+
 header.main > :last-child {
   /* margin: 0 0 1em 0; */
   margin: 0 0 0.5em 0; }
@@ -1257,7 +1267,6 @@ input[type="radio"] + label:before {
 
  .image.main {
   width: 100%; 
-  max-height: 645px; 
   overflow: hidden; 
   display: flex; 
   justify-content: center; 
@@ -1265,26 +1274,28 @@ input[type="radio"] + label:before {
 }
 
 .image.main img {
-  width: 100%; 
-  max-height: 645px; 
+  width: 80%; 
+  max-height: 545px; 
   object-fit: cover; 
 }
 
 @media screen and (max-width: 1439px) {
   .image.main img {
-    max-height: 545px;
+    max-height: 445px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .image.main img {
-    max-height: 445px;
+    width: 100%;
+    max-height: 345px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .image.main img {
-    max-height: 345px;
+    width: 100%;
+    max-height: 245px;
   }
 }
 
@@ -1778,6 +1789,7 @@ button,
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0 0 2em -6em;
+  padding: 0 6em 0.1em 6em;
   width: calc(100% + 6em); }
   .posts article {
     -moz-flex-grow: 0;
@@ -1841,6 +1853,7 @@ button,
   text-overflow: ellipsis;
 }
 
+
 @media screen and  (max-width: 1024px)  {
   .card_content > h3 {
     font-size: 1em;
@@ -1880,6 +1893,22 @@ button,
         height: 100%; }
       .posts article:nth-last-child(1):after, .posts article:nth-last-child(2):after {
         display: none; } }
+
+@media screen and (max-width: 1680px) {
+.posts {
+ padding: 0 2.5em 0 2.5em;}
+}
+
+@media screen and (max-width: 768px) {
+  .posts {
+   padding: 0 1.5em 0 1.5em;}
+  }
+
+@media screen and (max-width: 425px) {
+  .posts {
+   padding: 0;}
+  } 
+
   @media screen and (max-width: 736px) {
     .posts {
       margin: 0 0 2em -4.5em;
@@ -1911,6 +1940,12 @@ button,
           .posts article:last-child:after {
             display: none; } }
 
+
+.comments-container {
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
 /* Wrapper */
 #wrapper {
   display: -moz-flex;
@@ -1940,7 +1975,7 @@ button,
     margin: 0 auto;
     max-width: 110em; }
     #main > .inner > section {
-      padding: 6em 0 4em 0 ;
+      padding: 4em 0 4em 0 ;
       border-top: solid 2px rgba(210, 215, 217, 0.75); }
       #main > .inner > section:first-of-type {
         border-top: 0 !important; }
@@ -1966,6 +2001,13 @@ button,
   margin: auto;
   padding: 0 15px;
 }
+
+@media (max-width: 425px) {
+  .post_container {
+    padding: 0;
+  }
+}
+
 @media (min-width: 576px) {
     .post_container {
         max-width: 100%;
@@ -2230,12 +2272,6 @@ button,
 #header .dark-mode-button:hover svg path {
   fill: #8A80BF; 
 }
-  
-  /* #header .logo img {
-    margin-right: 5px;
-    height: 1.125em;
-  } */
-
   #header .icons {
     text-align: right; }
   @media screen and (max-width: 1680px) {
@@ -2256,37 +2292,250 @@ button,
 
 /* Banner */
 #banner {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 6em 0 4em 0 ;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex; }
-  #banner h1 {
-    margin-top: -0.125em; }
-  #banner .content {
-    -moz-flex-grow: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-grow: 1;
-    flex-grow: 1;
-    -moz-flex-shrink: 1;
-    -webkit-flex-shrink: 1;
-    -ms-flex-shrink: 1;
-    flex-shrink: 1;
-    width: 50%; }
-
-/* my_style */
-
-.content > p {
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6em 0 4em 0;
 }
 
-  #banner .image {
+.slider-container {
+  position: relative;
+  max-width: 1200px;
+  height: 600px;
+  overflow: hidden;
+  background: #000;
+  border-radius: 15px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+@media screen and (max-width: 1680px) {
+  .slider-container  {
+    max-width: 1000px;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .slider-container  {
+    max-width: 800px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .slider-container  {
+    max-width: 600px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .slider-container  {
+    max-width: 400px;
+    height: 300px;
+  }
+}
+
+.slider {
+  display: flex;
+  aspect-ratio: 16 / 9;
+  transition: transform 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 481px) {
+  .slider  {
+    aspect-ratio: 2.5/2;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .slider  {
+    aspect-ratio: 5.5/5;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .slider  {
+    aspect-ratio: 20/25;
+  }
+}
+
+
+.slide {
+  min-width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.text-container {
+  z-index: 1;
+  position: absolute;
+  bottom: 136px;
+  padding: 0 35px;
+  -webkit-box-pack: end;
+}
+
+@media screen and (max-width: 1680px) {
+  .text-container {
+    bottom: 116px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .text-container  {
+    bottom: 86px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .text-container {
+    bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .text-container {
+    bottom: 36px;
+    padding: 0 15px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .text-container  {
+    bottom: 26px;
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .text-container  {
+    bottom: 70px;
+    padding: 0 10px;
+  }
+}
+
+.text-container h2 {
+  min-height: auto;
+  display: -webkit-box;
+  margin: 10px 5px;
+  font-size: 36px;
+  text-shadow: rgb(0, 0, 0) 0px 1px 2px;
+  line-height: 0.94;
+  letter-spacing: normal;
+  color: rgb(255, 255, 255);
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 720px;
+}
+
+@media screen and (max-width: 1024px) {
+  .text-container h2 {
+    font-size: 30px;
+    max-width: 520px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .text-container h2 {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .text-container h2 {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .text-container h2 {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .text-container h2 {
+    font-size: 16px;
+  }
+}
+
+.text-container p {
+  margin: 0px 5px;
+  font-size: 18px;
+  text-shadow: rgb(0, 0, 0) 0px 1px 2px;
+  line-height: normal;
+  letter-spacing: normal;
+  color: rgb(255, 255, 255);
+  max-width: 720px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  .text-container p {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .text-container p {
+    font-size: 12px;
+  }
+}
+
+.slide a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center; 
+  border-radius: 15px;
+  filter: brightness(75%); 
+  transition: transform 0.3s ease-in-out; 
+}
+
+.slide img:hover {
+  transform: scale(1.1); 
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: #8A80BF;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  user-select: none;
+  z-index: 10;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.next {
+  right: 0;
+  border-radius: 0 3px 3px 0;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+  /* #banner .image {
     position: relative;
     -moz-flex-grow: 0;
     -webkit-flex-grow: 0;
@@ -2300,15 +2549,15 @@ button,
     margin: 0 0 2em 2em;
     width: 50%; }
     #banner .image img {
-      position: absolute; /* Позиционируем абсолютно */
-      top: 0; /* Размещаем изображение вверху контейнера */
-      left: 0; /* Размещаем изображение слева контейнера */
-      width: 100%; /* Ширина изображения равна ширине контейнера */
-      height: 100%; /* Высота изображения равна высоте контейнера */
-      object-fit: cover; /* Используем объектно-ориентированное заполнение, чтобы изображение заполнило свою область */
-      object-position: center; /* Позиционируем изображение по центру */}
+      position: absolute; 
+      top: 0;
+      left: 0; 
+      width: 100%; 
+      height: 100%; 
+      object-fit: cover; 
+      object-position: center;} */
 
-@media screen and (max-width: 1680px) {
+/* @media screen and (max-width: 1680px) {
   #banner  {
     max-width: 1200px;
   }
@@ -2318,7 +2567,7 @@ button,
   #banner  {
     max-width: 800px;
   }
-}
+} */
 
   @media screen and (orientation: portrait) and (max-width: 1024px) {
     #banner {
@@ -2444,6 +2693,127 @@ button,
     margin-top: 0;
     padding-top: 0; }
 
+#menu .major {
+  padding: 0;
+}
+
+.form {
+  margin-bottom: 2em;
+}
+
+
+  /* game */
+
+.game-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.game-container  ul li{
+  list-style: none;;
+}
+
+.question {
+  margin-bottom: 20px;
+}
+
+.question p {
+  font: inherit;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 425px) {
+  .question p {
+    font-size: 16px; 
+  }
+}
+
+.photos {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .photos {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.photos img {
+  width: 45%; 
+  height: auto;
+  cursor: pointer;
+  border-radius: 2em;
+  border: 4px solid transparent;
+  transition: border-color 0.3s;
+}
+
+@media screen and (max-width: 768px) {
+  .photos img {
+    width: 80%;
+    border-radius: 1em;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .photos img {
+    width: 100%; 
+  }
+}
+
+.photos img:hover {
+  border-color: #8A80BF; /* Цвет рамки при наведении */
+}
+
+.game-container #result {
+  margin: 3em 0 3em 0;
+  font-size: 26px;
+}
+
+.game-container #score {
+  margin: 3em 0 3em 0;
+  font-size: 26px;
+}
+
+@media screen and (max-width: 425px) {
+  .game-container #score {
+    font-size: 16px; 
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .game-container #result {
+    font-size: 16px; 
+  }
+}
+
+.game-container #restart {
+  margin: 3em 0 3em 0;
+}
+
+@media screen and (max-width: 425px) {
+  .game-container#restart {
+    margin: 1.5em 0 1.5em 0; 
+  }
+}
+
+ /* sun icon */
+
+#sun {
+  display: none;
+}
+
+.dark-theme #sun {
+  display: inline;
+}
+
+.dark-theme #moon {
+  display: none;
+}
 
  /* dark-mode-button */
 
@@ -2482,6 +2852,15 @@ button,
   color: #f0f0f0;
 }
 
+.dark-mode .text-container > h2 {
+  color: #fff;
+}
+
+.dark-mode .text-container > p {
+  color: #fff;
+}
+
+
 .dark-mode p {
   color: #CED2D2;
 }
@@ -2511,6 +2890,9 @@ button,
 .dark-mode #menu ul li span {
   color: #f0f0f0; 
 }
+
+.dark-mode #menu ul a.opener, #menu ul span.opener:hover {
+  color: #8A80BF; }
 
 .dark-mode #sidebar > .inner > .alt {
   background-color: #100E0D;
